# TimeSeries_PatternRecognition

./: README.md  TimeSeriesGenerator.py  plot_results.py  speedup_results_SoA.csv
Example_results/: Example_results.txt  speedup_results_AoS.csv
Midterm-Assignment_AoS/: CMakeLists.txt  findeBestMatch.cpp  findeBestMatch.h  main.cpp  timeSeries.h  utils.cpp  utils.h
Midterm-Assignment_SoA/: CMakeLists.txt  findeBestMatch.cpp  findeBestMatch.h  main.cpp  timeSeries.h  utils.cpp  utils.h
